<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_56dp"
        android:layout_marginBottom="@dimen/toolbar_margin_24dp"
        app:contentInsetStartWithNavigation="0dp"
        app:title="@string/app_name"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        app:titleTextColor="?attr/colorOnPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/large_padding"
        android:paddingEnd="@dimen/large_padding">

        <Button
            android:id="@+id/btn_search"
            style="@style/MainButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/search_text"
            app:icon="@drawable/ic_search" />

        <Button
            android:id="@+id/btn_library"
            style="@style/MainButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/library_text"
            app:icon="@drawable/ic_library" />

        <Button
            android:id="@+id/btn_settings"
            style="@style/MainButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/settingsBtn_text"
            app:icon="@drawable/ic_settings" />

    </LinearLayout>

</LinearLayout>