<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/colorPrimary"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:navigationIcon="@drawable/ic_back_arrow"
        app:title="@string/search_text"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        app:titleTextColor="?attr/colorOnPrimary"
        app:contentInsetStartWithNavigation="0dp"
        android:foreground="?attr/selectableItemBackground"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/large_padding"
        android:layout_marginVertical="@dimen/small_padding">

        <EditText
            android:id="@+id/search_bar"
            style="@style/SearchEditViewStyle"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:autofillHints=""
            android:imeOptions="actionDone"
            android:singleLine="true" />

        <ImageView
            android:id="@+id/cancel_button"
            android:layout_width="@dimen/small_icon_size"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="14dp"
            android:contentDescription="@string/clear_text"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_cancel_icon"
            android:visibility="gone"
            app:tint="?attr/colorOnContainer" />
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/activity_search_item"
        android:layout_marginTop="@dimen/large_padding">

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/placeholder_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/placeholder_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            tools:src="@drawable/ic_no_data"
            android:layout_marginTop="120dp"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/placeholder_message"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/medium_text_size"
            tools:text="@string/no_internet"
            android:textFontWeight="400"
            android:fontFamily="@font/ys_display_medium" />

        <Button
            android:id="@+id/update_response"
            style="@style/SearchButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_response" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/history_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:text="@string/history_title"
            android:gravity="center"
            android:fontFamily="@font/ys_display_medium"
            android:textSize="@dimen/medium_text_size"
            android:textColor="?attr/colorOnSecondary"
            android:layout_marginTop="@dimen/extra_padding" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycle_history_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/small_padding"
            android:layout_weight="1"
            tools:listitem="@layout/activity_search_item">

        </androidx.recyclerview.widget.RecyclerView>

        <Button
            android:id="@+id/clear_history"
            style="@style/SearchButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_history" />
    </LinearLayout>

</LinearLayout>